<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">流量计收发管理系统</string>
    <string name="action_settings">Settings</string>
    <string name="login_progress_signing_in">正在登陆......</string>
    <string name="username">用户名：</string>
	<string name="password">密    码：</string>
    <string name="prompt_email">请输入用户名</string>
	<string name="prompt_password">请输入密码</string>
	<string name="action_sign_in_short">action_sign_in_short</string>
	<string name="action_sign_in_register">登陆</string>
	<string name="error_field_required">error_field_required</string>
	<string name="error_invalid_password">error_invalid_password</string>
	<string name="error_invalid_email">error_invalid_email</string>
	<string name="error_incorrect_password">error_incorrect_password</string>
	
</resources>
